<resources>
    <string name="app_name" translatable="false">OpenPods</string>
    <string name="intro1">This app lets you check the status of your AirPods on any Android device</string>
    <string name="intro2">To operate, we need permission to use Bluetooth LE (Location) and permission to run in background</string>
    <string name="introAllow">Allow</string>
    <string name="main1">The app will show a notification when your AirPods are connected</string>
    <string name="main2">You can hide this app if you want</string>
    <string name="settings">Settings</string>

    <string name="noBtText">It looks like this device doesn\'t have Bluetooth LE</string>
    <string name="locationDisabledText">You need to turn on Location to allow OpenPods to read the status</string>
    <string name="supportedDevices">Supported devices:\n&#8226; Apple AirPods 1st gen\n&#8226; Apple AirPods 2nd gen\n&#8226; Apple AirPods Pro</string>

    <string name="hide">Hide app</string>
    <string name="hideClicked">The icon will disappear soon</string>
    <string name="batterySaver">Battery saver (Not recommended)</string>
    <string name="batterySaver_desc">Enable this if Bluetooth uses a lot of battery</string>
    <string name="about">About</string>

    <string name="about1">Developed by Federico Dossena</string>
    <string name="about2">Fork developed by Sergio Pérez</string>
    <string name="website">Website</string>
    <string name="github">Github</string>
    <string name="donate">Donate</string>

</resources>
